--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="https://bogdan1neverov.github.io/FG/">Главная</a>
     </header>
     <main>
       <h1>Полезная информация</h1>
